# django-streamlit

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/: app.py  db.sqlite3  manage.py
example/apps/demo/: admin.py  models.py
example/apps/demo/management/commands/: import_test_data.py
example/apps/demo/management/commands/data/: countries_of_the_world.csv
example/apps/demo/migrations/: 0001_initial.py
example/example/: settings.py
example/pages/: forms.py  views.py
src/django_streamlit/: __init__.py  apps.py  cli.py  decorators.py  settings.py  user_messages.py
src/django_streamlit/management/commands/: streamlit.py
src/django_streamlit/views/: list.py
tests/: __init__.py  test_django_streamlit.py
