[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_streamlit"
version = "0.1.0"
description = "Django + Streamlit"
readme = "README.rst"
authors = [
  {name = "Özer Sahin", email = "info@mathison.ch"}
]
maintainers = [
  {name = "Özer Sahin", email = "info@mathison.ch"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Mathison-AG/django_streamlit/issues"
changelog = "https://github.com/Mathison-AG/django_streamlit/blob/master/changelog.md"
homepage = "https://github.com/Mathison-AG/django_streamlit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

