[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_streamlit"
version = "0.1.0"
description = "Django + Streamlit"
readme = "README.rst"
authors = [
  {name = "Özer Sahin", email = "info@mathison.ch"}
]
maintainers = [
  {name = "Özer Sahin", email = "info@mathison.ch"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Mathison-AG/django_streamlit/issues"
changelog = "https://github.com/Mathison-AG/django_streamlit/blob/master/changelog.md"
homepage = "https://github.com/Mathison-AG/django_streamlit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = false
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"



# Poetry
# ------

[tool.poetry]
name = "django_streamlit"
version = "0.1.0"
description = "Django + Streamlit"
authors = ["Özer Sahin <info@mathison.ch>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
streamlit = "^1.38.0"
django-pandas = "^0.6.7"

[tool.poetry.group.dev.dependencies]
pip = "^24.2"
bump2version = "^1.0.1"
wheel = "^0.44.0"
tox = "^4.20.0"
coverage = "^7.6.1"
sphinx = "^8.0.2"
twine = "^5.1.1"
ruff = "^0.6.8"
pytest = "^8.3.3"
django-stubs = "^5.1.0"
mypy = "^1.11.2"

